# titanai

./: .gitignore  CLAUDE.md  Makefile  README.md  prompt-log.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.specify/memory/: constitution.md
design-docs/: background-jobs.md  data-model.md  implementation-strategy.md  pii-handling.md  plan.md  risk-mitigation.md  routes.md  tenant-isolation-strategy.md
specs/001-multi-tenant-catalog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-tenant-catalog/checklists/: requirements.md
specs/001-multi-tenant-catalog/contracts/: api.md
src/titanai/: __init__.py  main.py
src/titanai/api/: books.py  dependencies.py  ingestion.py  metrics.py  reading_lists.py  tenants.py
src/titanai/core/: config.py  pii.py
src/titanai/db/: connection.py  schema.py
src/titanai/db/repositories/: activity_logs.py  book_versions.py  books.py  ingestion_jobs.py  reading_lists.py  tenant_metrics.py  tenants.py
src/titanai/models/: books.py  ingestion.py  reading_lists.py  tenants.py
src/titanai/services/: ingestion.py  openlibrary.py  reading_lists.py  versions.py
src/titanai/workers/: ingestion.py  pool.py  refresh.py
tests/: conftest.py  test_activity_logs.py  test_books.py  test_ingestion.py  test_isolation.py  test_jobs.py  test_metrics.py  test_pii.py  test_reading_lists.py  test_tenants.py  test_versions.py
